# paint

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
css/: style.css
img/: app_icon.icns  app_icon.rc
paint/: window.cpp  window.hpp  workspace.cpp  workspace.hpp
paint/shapes/: base_shape.cpp  base_shape.hpp  bound.cpp  bound.hpp  boundline.cpp  boundline.hpp  ellipse.cpp  ellipse.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  shape_types.cpp  shape_types.hpp  triangle.cpp  triangle.hpp
paint/workspace_strategies/: bound.cpp  bound.hpp  drag.cpp  drag.hpp  draw.cpp  draw.hpp  erase.cpp  erase.hpp  workspace_strategy.cpp
paint/workspace_strategy/: bound.cpp  bound.hpp  drag.cpp  drag.hpp  draw.cpp  draw.hpp  erase.cpp  erase.hpp  workspace_strategy.cpp  workspace_strategy.hpp
